# morfette

./: Makefile  README  morfette.cabal
branches/morfette-online/src/GramLab/Data/Diff/: EditListRev.hs
branches/morfette-online/src/GramLab/Morfette/: Utils.hs
branches/morfette-online/src/GramLab/Morfette/Lang/: Conf.hs
branches/morfette-online/src/GramLab/Perceptron/: Multiclass.hs
branches/text/: README
branches/text/src/: Main.hs
branches/text/src/GramLab/Morfette/: Evaluation.hs  LZipper.hs  Models.hs  Token.hs  Utils.hs
branches/text/src/GramLab/Morfette/Features/: Common.hs
branches/text/src/GramLab/Morfette/Lang/: Conf.hs
branches/text/src/GramLab/Perceptron/: Model.hs  Multiclass.hs
branches/text/src/contrib/: README  morfette2sent.pl
data/es/freeling-dict/: dicc-1.2.src
data/es/model/: mwe.model
data/fr/model/: mwe.model
src/: INSTALL  LICENSE  Lemma.hs  Main.hs  Makefile  MorfoInduction.hs  POS.hs  morfette.cabal
src-r26/Data/Binary/: Strict.hi
src-r26/GramLab/: BinarizeFeatures.hs
src-r26/GramLab/Data/: AssocTF.hs  Zipper.hs
src-r26/GramLab/Morfette/: NFDataIntances.hs
src/Aux/: Text.hs  Utils.hs
src/GramLab/: Composable.hs  FeatureSet.hs  Intern.hs
src/GramLab/Data/: Assoc.hs  AssocConversions.hs  Distribution.hs  Levenshtein.hs  StringLike.hs
src/GramLab/Data/LCS/: SimpleMemo.hs
src/GramLab/Maxent/ZhangLe/: c_perceptronmodel.cpp
src/GramLab/Morfette/: BeamSearchChain.hs  BinaryInstances.hs  Evaluation.hs  LZipper.hs  Lexicon.hs  MWE.hs  Models.hs  Models2.hs  OldMain.hs  Token.hs  Utils.hs
src/GramLab/Morfette/Features/: Common.hs
src/GramLab/Morfette/Features/Spec/1/: Lemma.hs
src/GramLab/Morfette/Features/Spec/3/: Lemma.hs
src/GramLab/Morfette/Lang/: Conf.hs
src/GramLab/Morfette/Settings/: Defaults.hs
src/GramLab/Perceptron/: .Rhistory  IntModel.hs  Model.hs  Multiclass.hs  Vector.hs
src/GramLab/Statistics/: Significance.hs
src/contrib/: convertFTBpos_to_morfette.pl  morfette_run_eval.sh
tags/0.2/src/: INSTALL
tags/0.2/src/GramLab/: Commands.hs  Statistics.hs  Utils.hs
tags/0.2/src/GramLab/Data/Diff/: EditList.hs  EditListBidi.hs
tags/0.2/src/GramLab/Morfette/: Token.hs
tags/2.0/src/GramLab/Data/Diff/: Instances.hs
tags/2.0/src/GramLab/Perceptron/: Multiclass.hs  Vector.hs
tags/morfette-0.1/src/: Lemma.hs  POS.hs
tags/morfette-0.1/src/GramLab/: Commands.hs  FeatureSet.hs  Intern.hs  Metrics.hs  ProbDist.hs
tags/morfette-0.1/src/GramLab/Data/: CommonSubstrings.hs  FuzzyEditTree.hs  FuzzySubstrings.hs
tags/morfette-0.1/src/GramLab/Data/Diff/: EditTree2.hs
tags/morfette-0.1/src/GramLab/Maxent/: Megam.hs  Model.hs
tags/morfette-0.1/src/GramLab/Maxent/ZhangLe/: IntModel.hs  Model.hs  c_maxentmodel.h  c_perceptronmodel.h
tags/morfette-0.1/src/GramLab/Morfette/: Config.hs  MWE.hs  Main.hs
tags/morfette-0.1/src/GramLab/Morfette/Features/Spec/2/: Lemma.hs  pos.hs
tags/morfette-0.1/src/GramLab/Morfette/Lang/: Conf.hs
tags/morfette-0.1/src/GramLab/Morfette/es/: Lexicon.hs  Tagging3.hs
tags/morfette-0.2/src/GramLab/: Binomial.hs
tags/morfette-0.2/src/GramLab/Data/: StringLike.hs
tags/morfette-0.2/src/GramLab/Data/Diff/: FuzzyEditTree.hs
tags/morfette-0.2/src/GramLab/Morfette/: BeamSearch.hs  Evaluation.hs  NGrams.hs  Utils.hs
tags/morfette-0.2/src/GramLab/Perceptron/: IntModel.hs
tags/morfette-0.3.1/src/: Main.hs  Makefile
tags/morfette-0.3.1/src/GramLab/Data/: Assoc.hs
tags/morfette-0.3.1/src/GramLab/Perceptron/: Multiclass.hs
tags/morfette-0.3.2/src/GramLab/: FeatureSet.hs
tags/morfette-0.3.2/src/GramLab/Data/Diff/: EditTree.hs  EditTree2Rev.hs
tags/morfette-0.3.2/src/GramLab/Morfette/: BeamSearchChain.hs  Stat.hs
tags/morfette-0.3.2/src/GramLab/Perceptron/: IntModel.hs
tags/morfette-0.3.2/src/contrib/: convertFTBpos_to_morfette.pl  run_morfette_all.sh
tags/morfette-0.3/src/: morfette.cabal
tags/morfette-0.3/src/GramLab/Morfette/Settings/: Defaults.hs
tags/v-0.1/src/: morfette-exe.cabal
tags/v-0.1/src/GramLab/: SexpParser.hs
tags/v-0.1/src/GramLab/Maxent/ZhangLe/: c_perceptronmodel.cpp
tags/v-0.1/src/GramLab/Morfette/: Utils.hs
trunk/: Makefile  README  morfette.cabal
trunk/data/es/freeling-dict/: dicc-1.5.src
trunk/src/: INSTALL  Lemma.hs  Main.hs  Makefile  POS.hs  Setup.lhs  ghc_rts_opts.c  morfette-exe.buildinfo  morfette.cabal
trunk/src-r26/: LICENSE
trunk/src-r26/Data/Binary/: Strict.hs
trunk/src-r26/GramLab/Data/: Atom.hs  Tree.hs
trunk/src-r26/GramLab/Morfette/: BinaryInstances.hs
trunk/src-r26/GramLab/Morfette/Lang/: Conf.hs
trunk/src-r26/GramLab/Perceptron/: Vector.hs
trunk/src/GramLab/: Commands.hs  FeatureSet.hs  Independence.hs  Intern.hs  Utils.hs
trunk/src/GramLab/Data/: CommonSubstrings.hs
trunk/src/GramLab/Data/Diff/: EditTree.hs
trunk/src/GramLab/Maxent/: TempDir.hs
trunk/src/GramLab/Maxent/ZhangLe/: Makefile  c_maxentmodel.cpp
trunk/src/GramLab/Morfette/: BinaryInstances.hs  Config.hs  Evaluation.hs  Lexicon.hs  MWE.hs  Models.hs  Models2.hs  Token.hs  Utils.hs
trunk/src/GramLab/Morfette/Features/: FeatSpec.hs
trunk/src/GramLab/Morfette/Settings/: Defaults.hs
trunk/src/GramLab/Perceptron/: .RData  IntModel.hs  Model.hs  Multiclass.hs  Vector.hs
trunk/src/contrib/: convert_tagset-ftbmax2ftbcc.pl  morfette_train.sh  sent2morfette.pl
wiki/: INSTALL.wiki  InputFormatting.wiki  README.wiki
