Name:       morfette
Version:    0.3.5
Homepage:   http://sites.google.com/site/morfetteweb/
Synopsis:   A tool for supervised learning of morphology
Description: Morfette is a tool for supervised learning of inflectional
             morphology. Given a corpus of sentences annotated with lemmas 
             and morphological labels, and optionally a lexicon, morfette 
             learns how to morphologically analyse new sentences.
License:     BSD3
License-file: LICENSE
Author:      Grzegorz Chrupała
Maintainer:  Grzegorz Chrupała <gchrupala@lsv.uni-saarland.de>
build-type:  Simple
category:    Natural Language Processing
Extra-source-files: README, INSTALL, Makefile
cabal-version: >= 1.2

Executable     morfette
  hs-source-dirs: src
  Main-Is:        Main.hs
  Other-Modules:  GramLab.Commands, GramLab.Morfette.LZipper, 
                  GramLab.Data.StringLike,
                  GramLab.Data.CommonSubstrings, GramLab.Data.Diff.EditTree, 
                  GramLab.Morfette.Token, GramLab.Binomial, 
                  GramLab.Perceptron.Vector, GramLab.Data.Assoc,
                  GramLab.Intern, GramLab.Utils, GramLab.Perceptron.Multiclass,
                  GramLab.Perceptron.IntModel, GramLab.Morfette.Evaluation,
                  GramLab.Morfette.Lang.Conf, GramLab.Morfette.MWE,
                  GramLab.FeatureSet, GramLab.Perceptron.Model, 
                  GramLab.Morfette.Config, GramLab.Morfette.Models, 
                  GramLab.Morfette.Settings.Defaults, 
                  GramLab.Morfette.Features.Common, 
                  Lemma, POS, GramLab.Morfette.Utils,
                  Paths_morfette
  Build-depends:  base >=3 && <=5 , containers, array, mtl, 
                  directory, filepath, pretty,
                  utf8-string, bytestring, binary, QuickCheck >= 2.3
  cc-options:     -Wall 
  c-sources:      src/ghc_rts_opts.c 
  ghc-options:    -O2 -rtsopts
